# rusty-project-mng

./: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  app.css  app.html  error.html  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240127030706_initial.sql  20240220133630_add_evm_histories.sql
src-tauri/sqls/authentication/: authenticate.sql
src-tauri/sqls/evm/: get_actual_cost.sql  get_earned_value.sql  get_planed_value.sql  get_planned_value.sql  get_planned_value_changes.sql
src-tauri/sqls/evm_histories/: all.sql
src-tauri/sqls/resources/: add.sql  get.sql  get_all.sql  update.sql
src-tauri/sqls/task_status/: get_all.sql
src-tauri/sqls/tasks/: add.sql  all.sql  all_full.sql  all_with_id_and_title.sql  delete.sql  get.sql  get_full.sql  get_max_end_date.sql  get_min_start_date.sql  update.sql
src-tauri/sqls/users/: add.sql  get.sql  get_all.sql
src-tauri/src/: db_connection.rs  env.rs  hash.rs  lib.rs  main.rs  users.rs
src-tauri/src/apis/: authentication.rs  evm.rs  mod.rs  resources.rs  task_status.rs  tasks.rs
src-tauri/src/models/: authentications.rs  evm.rs  evm_histories.rs  mod.rs  resources.rs  task_status.rs  tasks.rs  users.rs
src-tauri/src/utils/: env.rs  hash.rs
src/components/: EarnedValueManagementInfo.ts  EvmHistory.ts  PlannedValueChanges.ts  Resource.ts  TaskFull.ts
src/lib/: EvmChart.svelte  EvmIndex.svelte  EvmTable.svelte  LinkButton.svelte  Login.svelte  Modal.svelte  PlannedValueChangesChart.svelte  ResourceEdit.svelte  TaskEdit.svelte  TaskLane.svelte
src/routes/: +page.server.ts  +page.svelte  +page.ts
src/routes/(authed)/: +layout.svelte
src/routes/(authed)/configs/milestones/: +page.svelte
src/routes/(authed)/configs/resources/: +page.svelte  +page.ts
src/routes/(authed)/configs/task-types/: +page.svelte
src/routes/(authed)/evm/: +page.svelte  +page.ts
src/routes/(authed)/home/: +page.svelte
src/routes/(authed)/resources/: +page.svelte
src/routes/(authed)/tasks/: +page.svelte  +page.ts
src/routes/(authed)/tasks/add/: +page.svelte  +page.ts
src/routes/(notauthed)/login/: +page.svelte
src/routes/(notauthed)/playground/: +page.svelte
src/routes/home/: +page.svelte
