[package]
name = "rusty-project-mng"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = ["shell-open"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
password-hash = "0.5.0"
argon2 = { version = "0.5.3" }
pbkdf2 = { version = "0.12.2", features = ["simple"]}
scrypt = { version = "0.11.0" }
dotenvy = { version = "0.15.7"}
sqlx = { version = "0.7.3", features = ["sqlite","runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.35.1", features = ["macros"]}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
