[package]
name = "rusty-project-mng"
version = "0.0.1"
description = "Project Management App"
authors = ["jparound30"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "rusty_project_mng"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
password-hash = "0.5.0"
argon2 = { version = "0.5.3" }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
scrypt = { version = "0.11.0" }
dotenvy = { version = "0.15.7"}
sqlx = { version = "0.7.3", features = ["sqlite","runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.35.1", features = ["macros"] }

tauri-plugin-shell = "2.0.0-beta.0"
chrono = "0.4.31"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
